--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 header h1 {
     font-size: 2.2em;
     font-weight: 700;
-    color: var(--accent-color);
+    color: var(--text-light);
 }
 
 .company-logo {
@@ -138,3 +138,4 @@ main {
 .metric-card.negative-change .metric-percentage { /* AÑADIDO: Aplicar a porcentaje */
     color: var(--negative-color);
 }
+
